--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "dropdown";
-@import "searchbox";
+@import 'variables';
+@import 'dropdown';
+@import 'searchbox';
 
 $searchbox: true !default;
 
