replacing go by jquery

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -49,8 +49,8 @@ block content
               img(src="assets/logos/gitlab.jpg", alt="DocSearch + Gitlab", width=60)
               .glide__caption Gitlab
             .glide__slide
-              img(src="assets/logos/go.jpg", alt="DocSearch + Go", width=60)
-              .glide__caption Go
+              img(src="assets/logos/jquery.jpg", alt="DocSearch + jQuery", width=60)
+              .glide__caption jQuery
             .glide__slide
               img(src="assets/logos/grafana.jpg", alt="DocSearch + Grafana", width=60)
               .glide__caption Grafana
