--- a/docs/src/_includes/apply-form.pug
+++ b/docs/src/_includes/apply-form.pug
@@ -1,28 +1,51 @@
-form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", action="https://www.algolia.com/docsearch/join")
+form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", action="https://docsearch-hub.herokuapp.com/form/inbound", id="apply")
   .custom-form-content.form-content
-    .mb-2
-      label.control-label(for="url") Documentation URL
-      input#url.form-control(name="url", placeholder="https://project.org/docs", type="url", required)  
-      p.text-grey-dark.text--1.leading-2.my-1.italic We'll crawl pages at this address and index the content on Algolia.
+    .mb-2.form-step(name="step-documentationUrl")
+      label.control-label(for="documentationUrl") Documentation URL
+      input#url.form-control(name="documentationUrl", placeholder="https://project.org/docs", type="url", required)  
+      p.form-hint.text-grey-1.text--1.leading-2.my-1.italic We'll crawl pages at this address and index the content on Algolia.
+      p.form-error.text-mars-2.text--1.my-1.bold
 
-    .mb-2
+    .mb-2.form-step(name="step-repoUrl")
+      label.control-label(for="repoUrl") 
+        |Repository url
+        .inline.text--1.text-grey-1
+      input#url.form-control(name="repoUrl", placeholder="https://github.com/username/project", type="url", required)  
+      p.form-hint.text-grey-1.text--1.leading-2.my-1.italic We offer DocSearch to any open source project
+      p.form-error.text-mars-2.text--1.my-1.bold
+
+    .mb-2.form-step(name="step-email")
       label.control-label(for="email") Email
       input#email.form-control(name="email", placeholder="you@project.org", type="email", required)
-      p.text-grey-dark.text--1.leading-2.my-1.italic We'll send you the JavaScript snippet you'll have to integrate into your documentation.
-    .mb-2
+      p.form-hint.text-grey-1.text--1.leading-2.my-1.italic We'll send you the JavaScript snippet you'll have to integrate into your documentation.
+      p.form-error.text-mars-2.text--1.my-1.bold
+
+      .hidden
+        div.g-recaptcha(data-sitekey=placeholders.recaptchaKey, data-badge="inline", data-callback="recaptchaCallback", data-size="invisible")
+
+
+    .mb-2.form-step(name="step-algoliaPolicy")
       label.cursor-pointer
-        input(name="owner", type="checkbox", required)
+        input(name="algoliaPolicy", type="checkbox", required)
         span
           |  I'm the 
           .bold.inline owner
           |  of the website and I 
           a(href="./who-can-apply.html") read the checklist
         |  before applying.
+      p.form-error.text-mars-2.text--1.bold.my-1
+
     .mb-2
     button.c-button.c-button-primary.w-100(type="submit") Apply to DocSearch
-    p.leading-2.text-1.my-1 Refer to 
+    p.leading-2.text-1.my-1 
+      | This form is using reCaptcha as a spam protection measure (see 
+      a.clickable(href="https://policies.google.com/privacy") Privacy
+      |, 
+      a.clickable(href="https://policies.google.com/terms") Terms
+      |). Refer to 
       a.clickable(href="https://www.algolia.com/policies/terms") Algolia's Privacy Policy
-      |  for more information on how we use and protect your data
+      |  for more information on how we use and protect your data.
+
 
 
   .custom-form-thank-you.hidden
@@ -35,3 +58,14 @@ form.custom-apply-form.m-auto.max-w-sm.elevation.p-2.md_p-3(method="POST", actio
       span.custom-placeholder-url.inline.text-nebula your website
       |.
     p.text-2.leading-2  Please be patient, it can take a few days.
+
+  .custom-form-recaptcha-fallback.hidden
+    .poppins.text-4.mb-2 Oops!
+    p.text-2.leading-2.mb-1 It seems that our form is not working correctly right now. 
+    p.text-2.leading-2.mb-1
+      | But don't worry, you can still send an email directly to 
+      a.clickable(href="mailto:docsearch@algolia.com") docsearch@algolia.com
+      |  with your website and repository url to apply.
+    p.text-2.leading-2  Sorry for the inconvenience!
+
+script(src="https://www.google.com/recaptcha/api.js", async, defer)
