--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -169,7 +169,7 @@ block content
               |You don’t need to configure any settings or even have an Algolia
               |account.
             p.text-1.leading-2
-              |We take care of all of this automatically to ensure the best
+              |We take care of this automatically to ensure the best
               |documentation search experience.
           .fln.w-100.md_w-33.px-2.p-2 
             h3.pb-1.text-3.leading-2
