docs: adding more logos

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -55,11 +55,17 @@ block content
               img(src="assets/logos/grafana.jpg", alt="DocSearch + Grafana", width=60)
               .glide__caption Grafana
             .glide__slide
+              img(src="assets/logos/brew.png", alt="DocSearch + Brew", width=60)
+              .glide__caption Brew
+            .glide__slide
               img(src="assets/logos/graphql.jpg", alt="DocSearch + GraphQL", width=60)
               .glide__caption GraphQL
             .glide__slide
               img(src="assets/logos/jekyll.jpg", alt="DocSearch + Jekyll", width=60)
               .glide__caption Jekyll
+            .glide__slide
+              img(src="assets/logos/jest.png", alt="DocSearch + Jest", width=60)
+              .glide__caption Jest
             .glide__slide
               img(src="assets/logos/momentjs.jpg", alt="DocSearch + MomentJS", width=60)
               .glide__caption MomentJS
@@ -70,7 +76,7 @@ block content
               img(src="assets/logos/paypal.jpg", alt="DocSearch + Paypal", width=60)
               .glide__caption Paypal
             .glide__slide
-              img(src="assets/logos/postman.jpg", alt="DocSearch + Postman", width=60)
+              img(src="assets/logos/postman.png", alt="DocSearch + Postman", width=60)
               .glide__caption Postman
             .glide__slide
               img(src="assets/logos/react.jpg", alt="DocSearch + React", width=60)
@@ -96,6 +102,30 @@ block content
             .glide__slide
               img(src="assets/logos/yarn.jpg", alt="DocSearch + Yarn", width=60)
               .glide__caption Yarn
+            .glide__slide
+              img(src="assets/logos/gatsby.png", alt="DocSearch + Gatsby", width=60)
+              .glide__caption Gatsby
+            .glide__slide
+              img(src="assets/logos/gradle.png", alt="DocSearch + Gradle", width=60)
+              .glide__caption Gradle
+            .glide__slide
+              img(src="assets/logos/twilio.png", alt="DocSearch + Twilio", width=60)
+              .glide__caption Twilio
+            .glide__slide
+              img(src="assets/logos/hugo.png", alt="DocSearch + Hugo", width=60)
+              .glide__caption Hugo
+            .glide__slide
+              img(src="assets/logos/cordova.png", alt="DocSearch + Cordova", width=60)
+              .glide__caption Cordova
+            .glide__slide
+              img(src="assets/logos/vuetify.png", alt="DocSearch + Vuetify", width=60)
+              .glide__caption Vuetify
+            .glide__slide
+              img(src="assets/logos/ant-design.png", alt="DocSearch + Ant Design", width=60)
+              .glide__caption Ant Design
+            .glide__slide
+              img(src="assets/logos/home-assistant.png", alt="DocSearch + Home Assistant", width=60)
+              .glide__caption Home Assistant
                     
     .max-w-md.m-auto.text-center
       h2.text-solstice.text-5.normal.pb-2
