--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -16,7 +16,7 @@ block content
     .max-w-md.m-auto.text-center.px-2
       img.mt-3.mb-1(src="assets/docsearch-logo.svg", alt="DocSearch logo" width=480)
       .text-2.text-nova.mb-3 The best search experience for docs, integrates in minutes, for free
-      .text-5.text-telluric.mb-3 Providing search for 900+ docs, and counting.
+      .text-5.text-telluric.mb-3 Providing search for 1 500+ docs, and counting.
       a.c-button.c-button-primary(href="#join-docsearch-program") Join the Program
   
   .bg-moon.px-2
