docs: add python package

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -88,6 +88,12 @@ block content
               img(src="assets/logos/serverless.jpg", alt="DocSearch + Serverless", width=60)
               .glide__caption Serverless
             .glide__slide
+              img(src="assets/logos/pipenv.png", alt="DocSearch + pipenv", width=60)
+              .glide__caption pipenv
+            .glide__slide
+              img(src="assets/logos/requests.png", alt="DocSearch + Requests", width=60)
+              .glide__caption Requests
+            .glide__slide
               img(src="assets/logos/socketio.jpg", alt="DocSearch + Socket.io" , width=60)
               .glide__caption Socket.io
             .glide__slide
