--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -16,7 +16,7 @@ block content
     .max-w-md.m-auto.text-center.px-2
       img.mt-3.mb-1(src="assets/docsearch-logo.svg", alt="DocSearch logo" width=480)
       .text-2.text-nova.mb-3 The best search experience for docs, integrates in minutes, for free
-      .text-5.text-telluric.mb-3 Providing search for 900+ docs, and counting.
+      .text-5.text-telluric.mb-3 Providing search for 1 500+ docs, and counting.
       a.c-button.c-button-primary(href="#join-docsearch-program") Join the Program
   
   .bg-moon.px-2
@@ -33,9 +33,6 @@ block content
             .glide__slide
               img(src="assets/logos/circleio.jpg", alt="DocSearch + Circle.io", width=60)
               .glide__caption Circle.io
-            .glide__slide
-              img(src="assets/logos/cordova.jpg", alt="DocSearch + Cordova", width=60)
-              .glide__caption Cordova
             .glide__slide
               img(src="assets/logos/electron.jpg", alt="DocSearch + Electron", width=60)
               .glide__caption Electron
@@ -55,11 +52,17 @@ block content
               img(src="assets/logos/grafana.jpg", alt="DocSearch + Grafana", width=60)
               .glide__caption Grafana
             .glide__slide
+              img(src="assets/logos/brew.png", alt="DocSearch + Brew", width=60)
+              .glide__caption Brew
+            .glide__slide
               img(src="assets/logos/graphql.jpg", alt="DocSearch + GraphQL", width=60)
               .glide__caption GraphQL
             .glide__slide
               img(src="assets/logos/jekyll.jpg", alt="DocSearch + Jekyll", width=60)
               .glide__caption Jekyll
+            .glide__slide
+              img(src="assets/logos/jest.png", alt="DocSearch + Jest", width=60)
+              .glide__caption Jest
             .glide__slide
               img(src="assets/logos/momentjs.jpg", alt="DocSearch + MomentJS", width=60)
               .glide__caption MomentJS
@@ -70,7 +73,7 @@ block content
               img(src="assets/logos/paypal.jpg", alt="DocSearch + Paypal", width=60)
               .glide__caption Paypal
             .glide__slide
-              img(src="assets/logos/postman.jpg", alt="DocSearch + Postman", width=60)
+              img(src="assets/logos/postman.png", alt="DocSearch + Postman", width=60)
               .glide__caption Postman
             .glide__slide
               img(src="assets/logos/react.jpg", alt="DocSearch + React", width=60)
@@ -81,6 +84,12 @@ block content
             .glide__slide
               img(src="assets/logos/serverless.jpg", alt="DocSearch + Serverless", width=60)
               .glide__caption Serverless
+            .glide__slide
+              img(src="assets/logos/pipenv.png", alt="DocSearch + pipenv", width=60)
+              .glide__caption pipenv
+            .glide__slide
+              img(src="assets/logos/requests.png", alt="DocSearch + Requests", width=60)
+              .glide__caption Requests
             .glide__slide
               img(src="assets/logos/socketio.jpg", alt="DocSearch + Socket.io" , width=60)
               .glide__caption Socket.io
@@ -96,6 +105,30 @@ block content
             .glide__slide
               img(src="assets/logos/yarn.jpg", alt="DocSearch + Yarn", width=60)
               .glide__caption Yarn
+            .glide__slide
+              img(src="assets/logos/gatsby.png", alt="DocSearch + Gatsby", width=60)
+              .glide__caption Gatsby
+            .glide__slide
+              img(src="assets/logos/gradle.png", alt="DocSearch + Gradle", width=60)
+              .glide__caption Gradle
+            .glide__slide
+              img(src="assets/logos/twilio.png", alt="DocSearch + Twilio", width=60)
+              .glide__caption Twilio
+            .glide__slide
+              img(src="assets/logos/hugo.png", alt="DocSearch + Hugo", width=60)
+              .glide__caption Hugo
+            .glide__slide
+              img(src="assets/logos/cordova.png", alt="DocSearch + Cordova", width=60)
+              .glide__caption Cordova
+            .glide__slide
+              img(src="assets/logos/vuetify.png", alt="DocSearch + Vuetify", width=60)
+              .glide__caption Vuetify
+            .glide__slide
+              img(src="assets/logos/ant-design.png", alt="DocSearch + Ant Design", width=60)
+              .glide__caption Ant Design
+            .glide__slide
+              img(src="assets/logos/home-assistant.png", alt="DocSearch + Home Assistant", width=60)
+              .glide__caption Home Assistant
                     
     .max-w-md.m-auto.text-center
       h2.text-solstice.text-5.normal.pb-2
