--- a/examples/vanilla/app.css
+++ b/examples/vanilla/app.css
@@ -1,7 +1,20 @@
 body {
-  font-family: sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding: 2rem;
 }
 
-.algolia-autocomplete {
+input {
+  padding: 12px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  font: inherit;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
   width: 100%;
+  max-width: 500;
+  margin-bottom: 'rem;
 }
