--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -1,10 +1,16 @@
+:root {
+  --algolia-docsearch-primary-color: #5468ff;
+  --algolia-docsearch-secondary-color: #5d6494;
+  --algolia-docsearch-third-color: #232533;
+}
+
 .algolia-docsearch-dropdown * {
   box-sizing: border-box;
 }
 
 .algolia-docsearch-results mark {
   background: none;
-  color: #5468ff;
+  color: var(--algolia-docsearch-primary-color);
   font-weight: bold;
 }
 
@@ -59,7 +65,7 @@
 }
 
 .algolia-docsearch-lvl0 {
-  color: rgb(93, 100, 148);
+  color: var(--algolia-docsearch-secondary-color);
   font-size: 14px;
   font-weight: bold;
   letter-spacing: 1.25px;
@@ -69,7 +75,7 @@
 }
 
 .algolia-docsearch-lvl1 {
-  color: #232533;
+  color: var(--algolia-docsearch-third-color);
   font-size: 14px;
   letter-spacing: -0.15px;
   line-height: 24px;
@@ -77,7 +83,7 @@
 }
 
 .algolia-docsearch-lvl2 {
-  color: rgb(93, 100, 148);
+  color: var(--algolia-docsearch-secondary-color);
   font-size: 10px;
   font-weight: bold;
   height: 16px;
@@ -102,7 +108,6 @@
   padding: 0.5rem 0;
 }
 
-/* li:hover .algolia-docsearch-content, */
 li[aria-selected='true'] .algolia-docsearch-content,
 .algolia-docsearch-content--active {
   background-color: #dadbea;
@@ -111,7 +116,6 @@ li[aria-selected='true'] .algolia-docsearch-content,
 .algolia-docsearch-footer {
   align-items: center;
   background-color: #f5f5fa;
-  /* border-top: 1px solid #c5c9e0; */
   display: flex;
   height: 55px;
   justify-content: space-between;
@@ -152,7 +156,7 @@ li[aria-selected='true'] .algolia-docsearch-content,
 }
 
 .algolia-docsearch-commands-description {
-  color: rgb(93, 100, 148);
+  color: var(--algolia-docsearch-secondary-color);
   font-size: 12px;
   letter-spacing: 0;
   margin-left: 0.25rem;
