Fix typo on docs homepage

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -70,8 +70,8 @@ block content
               img(src="assets/logos/netlify.jpg", alt="DocSearch + Netlify", width=60)
               .glide__caption Netlify
             .glide__slide
-              img(src="assets/logos/paypal.jpg", alt="DocSearch + Paypal", width=60)
-              .glide__caption Paypal
+              img(src="assets/logos/paypal.jpg", alt="DocSearch + PayPal", width=60)
+              .glide__caption PayPal
             .glide__slide
               img(src="assets/logos/postman.png", alt="DocSearch + Postman", width=60)
               .glide__caption Postman
