--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -16,25 +16,57 @@
 /* Form */
 
 .algolia-docsearch-form {
-  position: relative;
+  align-items: center;
+  border-bottom: 1px solid rgba(197, 201, 224, 0.4);
+  display: flex;
   margin: 0;
+  padding: 0 1rem;
+  position: relative;
 }
-
-/* Input */
 
 .algolia-docsearch-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   border: none;
-  border-bottom: 1px solid rgba(197, 201, 224, 0.4);
   font: inherit;
   min-height: 4rem;
-  padding: 1rem 1.5rem 1rem 3rem;
-  width: 100%;
   outline: none;
+  padding: 1rem;
+  width: 100%;
 }
 
-.algolia-docsearch-form::before {
-  content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBow="0 0 18 18"%3E%3Cpath d="M13.14 13.14L17 17l-3.86-3.86A7.11 7.11 0 1 1 3.08 3.08a7.11 7.11 0 0 1 10.06 10.06z" stroke="%235d6494" stroke-width="1.78" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" /%3E%3C/svg%3E');
-  display: block;
+.algolia-docsearch-input::-webkit-search-decoration,
+.algolia-docsearch-input::-webkit-search-cancel-button,
+.algolia-docsearch-input::-webkit-search-results-button,
+.algolia-docsearch-input::-webkit-search-results-decoration {
+  display: none;
+}
+
+.algolia-docsearch-submit,
+.algolia-docsearch-reset {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  border: none;
+  color: var(--algolia-docsearch-secondary-color);
+  cursor: pointer;
+  height: 64px;
+}
+
+.algolia-docsearch-submit svg {
+  height: 18px;
+  width: 18px;
+}
+
+.algolia-docsearch-reset svg {
+  height: 10px;
+  width: 10px;
+}
+
+/* .algolia-docsearch-form::before {
+  content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"%3E%3Cpath d="M13.14 13.14L17 17l-3.86-3.86A7.11 7.11 0 1 1 3.08 3.08a7.11 7.11 0 0 1 10.06 10.06z" stroke="%235d6494" stroke-width="1.78" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" /%3E%3C/svg%3E');
   width: 18px;
   height: 18px;
   display: block;
@@ -43,25 +75,19 @@
   left: 1rem;
   top: 50%;
   transform: translateY(-50%);
-}
+} */
 
 .algolia-docsearch--stalled .algolia-docsearch-form::before {
   content: url('data:image/svg+xml,%3Csvg viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="%23222" stroke-opacity=".5" %3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg transform="translate(1 1)" stroke-width="2"%3E%3Ccircle stroke-opacity=".3" cx="18" cy="18" r="18" /%3E%3Cpath d="M36 18c0-9.94-8.06-18-18-18"%3E%3CanimateTransform attributeName="transform" type="rotate" from="0 18 18" to="360 18 18" dur="1s" repeatCount="indefinite" /%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
   display: block;
-  width: 16px;
-  height: 16px;
   display: block;
-  position: absolute;
-  z-index: 1;
+  height: 16px;
   left: 1rem;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
-}
-
-@media (min-width: 900px) {
-  .algolia-docsearch-dropdown {
-    height: auto;
-  }
+  width: 16px;
+  z-index: 1;
 }
 
 /* Dropdown */
@@ -83,9 +109,10 @@
 
 @media (min-width: 900px) {
   .algolia-docsearch-dropdown {
-    margin-top: 1rem;
     box-shadow: 0px 2px 4px 0px rgba(93, 100, 148, 0.2),
       0px 5px 15px 0px rgba(37, 44, 97, 0.15);
+    height: auto;
+    margin-top: 1rem;
     max-height: 564px;
     max-width: 532px;
   }
@@ -102,9 +129,13 @@
   padding: 0;
 }
 
+.algolia-docsearch-dropdown-container {
+  position: relative;
+}
+
 .algolia-docsearch-results {
-  padding: 1.5rem;
   height: calc(100% - 115px);
+  padding: 1.5rem;
 }
 
 @media (min-width: 900px) {
@@ -138,8 +169,8 @@
   font-size: 0.875rem;
   font-weight: bold;
   letter-spacing: 0.078125rem;
-  margin: 0 0 0.5rem 0;
   line-height: 1.2rem;
+  margin: 0 0 0.5rem 0;
   text-transform: uppercase;
 }
 
@@ -171,7 +202,6 @@ li[aria-selected='true'] .algolia-docsearch-item-body,
   color: var(--algolia-docsearch-subtitle-color);
   font-size: 0.625rem;
   font-weight: bold;
-  height: 1rem;
   letter-spacing: 0.078125rem;
   line-height: 1rem;
   margin: 0;
@@ -196,24 +226,34 @@ li[aria-selected='true'] .algolia-docsearch-item-body,
 
 /* Footer */
 
-.algolia-docsearch-information {
+.algolia-docsearch-footer {
   align-items: center;
   background-color: #f5f5fa;
+  border-top: 1px solid rgba(197, 201, 224, 0.4);
   display: flex;
   height: 55px;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 1.5rem;
   position: relative;
+  position: fixed;
+  width: 100%;
 }
 
-.algolia-docsearch-information::before {
-  background-color: rgba(197, 201, 224, 0.4);
-  content: '';
-  display: block;
-  height: 1px;
-  position: absolute;
-  top: 0;
-  width: calc(100% - 3rem);
+@media (min-width: 640px) {
+  .algolia-docsearch-footer {
+    border: none;
+    justify-content: space-between;
+  }
+
+  .algolia-docsearch-footer::before {
+    background-color: rgba(197, 201, 224, 0.4);
+    content: '';
+    display: block;
+    height: 1px;
+    position: absolute;
+    top: 0;
+    width: calc(100% - 3rem);
+  }
 }
 
 .algolia-docsearch-commands {
