--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -50,14 +50,25 @@
   appearance: none;
   background: none;
   border: none;
-  color: var(--algolia-docsearch-secondary-color);
   cursor: pointer;
+}
+
+.algolia-docsearch-submit,
+.algolia-docsearch-reset,
+.algolia-docsearch-loadingIndicator {
+  color: var(--algolia-docsearch-secondary-color);
   height: 64px;
 }
 
-.algolia-docsearch-submit svg {
+.algolia-docsearch-submit svg,
+.algolia-docsearch-loadingIndicator svg {
   height: 18px;
   width: 18px;
+}
+
+.algolia-docsearch-submit,
+.algolia-docsearch-loadingIndicator {
+  width: 2rem;
 }
 
 .algolia-docsearch-reset svg {
@@ -65,29 +76,18 @@
   width: 10px;
 }
 
-/* .algolia-docsearch-form::before {
-  content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"%3E%3Cpath d="M13.14 13.14L17 17l-3.86-3.86A7.11 7.11 0 1 1 3.08 3.08a7.11 7.11 0 0 1 10.06 10.06z" stroke="%235d6494" stroke-width="1.78" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" /%3E%3C/svg%3E');
-  width: 18px;
-  height: 18px;
-  display: block;
-  position: absolute;
-  z-index: 1;
-  left: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-} */
+.algolia-docsearch-loadingIndicator {
+  display: none;
+}
 
-.algolia-docsearch--stalled .algolia-docsearch-form::before {
-  content: url('data:image/svg+xml,%3Csvg viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="%23222" stroke-opacity=".5" %3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg transform="translate(1 1)" stroke-width="2"%3E%3Ccircle stroke-opacity=".3" cx="18" cy="18" r="18" /%3E%3Cpath d="M36 18c0-9.94-8.06-18-18-18"%3E%3CanimateTransform attributeName="transform" type="rotate" from="0 18 18" to="360 18 18" dur="1s" repeatCount="indefinite" /%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
-  display: block;
-  display: block;
-  height: 16px;
-  left: 1rem;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 16px;
-  z-index: 1;
+.algolia-docsearch--stalled .algolia-docsearch-submit {
+  display: none;
+}
+
+.algolia-docsearch--stalled .algolia-docsearch-loadingIndicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Dropdown */
