--- a/examples/vanilla/app.css
+++ b/examples/vanilla/app.css
@@ -1,12 +1,32 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 .container {
   padding: 2rem;
+}
+
+.navbar {
+  align-items: center;
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+  box-sizing: border-box;
+  display: flex;
+  height: 64px;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
 }
