--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -4,10 +4,10 @@
   --algolia-docsearch-lvl0-color: #5d6494;
   --algolia-docsearch-lvl1-color: #232533;
   --algolia-docsearch-lvl2-color: rgba(93, 100, 148, 0.7);
-  --algolia-docsearch-gradient-start-color: rgb(245, 245, 250);
-  --algolia-docsearch-gradient-end-color: #fff;
+  --algolia-docsearch-content-color: rgba(0, 0, 0, 0.5);
+  --algolia-docsearch-background-start-color: rgb(245, 245, 250);
+  --algolia-docsearch-background-end-color: #fff;
   --algolia-docsearch-background-highlight-color: rgba(218, 219, 234, 0.4);
-  --algolia-docsearch-text-color: rgba(0, 0, 0, 0.5);
   --algolia-docsearch-border-color: rgba(197, 201, 224, 0.4);
   --algolia-docsearch-logo-color-outer: #5468ff;
   --algolia-docsearch-logo-color-inner: #fff;
@@ -31,7 +31,6 @@
 
 .algolia-docsearch-form {
   align-items: center;
-  /* border-bottom: 1px solid rgba(197, 201, 224, 0.4); */
   display: flex;
   margin: 0;
   position: relative;
@@ -117,8 +116,8 @@
 .algolia-docsearch-dropdown {
   background: linear-gradient(
     0deg,
-    var(--algolia-docsearch-gradient-start-color) 0%,
-    var(--algolia-docsearch-gradient-end-color) 100%
+    var(--algolia-docsearch-background-start-color) 0%,
+    var(--algolia-docsearch-background-end-color) 100%
   );
   border-radius: 6px;
   box-shadow: 0px 2px 4px 0px rgba(93, 100, 148, 0.2),
@@ -142,8 +141,7 @@
   display: none; /* Chrome and Safari */
 }
 
-.algolia-docsearch-dropdown ul,
-.algolia-docsearch-dropdown li {
+.algolia-docsearch-dropdown ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -154,14 +152,7 @@
 }
 
 .algolia-docsearch-results {
-  height: calc(100% - 115px);
   padding: 1.5rem;
-}
-
-@media (min-width: 640px) {
-  .algolia-docsearch-dropdown {
-    height: auto;
-  }
 }
 
 /* Items */
@@ -183,7 +174,7 @@
 */
 
 .algolia-docsearch-item {
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .algolia-docsearch-item-header {
@@ -230,11 +221,11 @@ li[aria-selected='true'] .algolia-docsearch-item-body {
 }
 
 .algolia-docsearch-item-body-paragraph {
-  color: var(--algolia-docsearch-text-color);
+  color: var(--algolia-docsearch-content-color);
   font-size: 0.75rem;
   font-weight: normal;
   line-height: 1rem;
-  margin: 0.1875rem 0 0.5rem 0;
+  margin: 0.1875rem 0 0 0;
 }
 
 /* Highlight */
@@ -249,9 +240,8 @@ li[aria-selected='true'] .algolia-docsearch-item-body {
 
 .algolia-docsearch-footer {
   align-items: center;
-  background-color: var(--algolia-docsearch-gradient-start-color);
   border-top: 1px solid var(--algolia-docsearch-border-color);
-  color: var(--algolia-docsearch-text-color);
+  color: var(--algolia-docsearch-content-color);
   display: flex;
   height: 55px;
   justify-content: flex-end;
@@ -295,6 +285,10 @@ li[aria-selected='true'] .algolia-docsearch-item-body {
     margin-right: 1rem;
   }
 
+  .algolia-docsearch-commands-border {
+    color: #d5d6e5;
+  }
+
   .algolia-docsearch-commands svg {
     height: 1rem;
     width: 1rem;
@@ -327,5 +321,6 @@ li[aria-selected='true'] .algolia-docsearch-item-body {
 }
 
 .algolia-docsearch-logo svg {
-  height: 1.1rem;
+  height: 1.1875rem;
+  color: var(--algolia-docsearch-lvl0-color);
 }
