--- a/packages/docsearch-theme-light/src/index.css
+++ b/packages/docsearch-theme-light/src/index.css
@@ -129,6 +129,7 @@
   right: 0;
   scrollbar-width: none; /* Firefox */
   width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 640px) {
@@ -153,6 +154,8 @@
 
 .algolia-docsearch-results {
   padding: 1.5rem;
+  height: calc(100% - 55px);
+  overflow: scroll;
 }
 
 /* Items */
